@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+birdie-github 2026-01-31 16:27:32+00:00 - build 6640
+
+1. gh-1059: Preserve timestamps for existing destination directories.
+
+--------------------------------------------------------------------------------
 drkns 2026-01-30 20:00:26+00:00 - build 6639
 
 1. Continue 6638.
